# chad-chat

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.rs  chat.html  index.html  login.html  possible_errors.md  possibleerrors.txt  register.html  sqlx-data.json  typeshare.toml
backend/.sqlx/: query-025c8f14f41d176173fd0b32e468bb7a47c6abf71af5ed5ace9c1db56fbcaac3.json  query-029af2978ee1894c32cad05910f052087d405c9afa3ba43a1e5f42e46fab46f6.json  query-04c973a60e4b7778b9612027a12a9c15ca4084ba3f9769ce64313b9c97f5f429.json  query-07337afebd3923982a6ffdf99bb157c0530474bed8b7f75e2165e5890ae2f128.json  query-09fc0c00ea8ee53454126c799eb1e5395f85fb133f40885a6f78a4f8a2d0512e.json  query-0beafd8b199ca4d8bab4d484e4fc38a80eeda2a8b730cbaa9286c3e6465db0a5.json  query-0e08998c2c8bba4233827d746265e350c31611dd354a981e33bb8416a82bda64.json  query-0f342426466ec2fc7feb18cb5d0be4908b65f2bfbf57a08d388f9ba325f4ba99.json  query-111255bf6e0c1d5d20fb7193fae3f0382ce8220b2da990dcd3ced0c8010acadd.json  query-11353284c6e1827122f6375294da490c22337964f3804742b46ec07723e0caf1.json  query-1718e8b6d47a23e6702ceada49a036cfa9efc04eac26ca6549facded5453da22.json  query-1e8c041f95f9204a2960c0a5b7c6dc818b01d29fb9ed50c218072788afe4ca0a.json  query-2667ce86d4d81af052c7aa347571d763e5e2095ffa2f2f15196759070d1adf9e.json  query-2c9b94e8fc961205c1913256f7b25cc96a3ba0258a880ff63297483b4b3034ba.json  query-2d53fc4705f7b5d9e99b24c7c57aef6a7332e9cb1d2d4e876e511780819b6a64.json  query-2ef52478013133c93adbda756e0226bc1b63501de887e5dda44fdb72620220d7.json  query-318153057dd8f6785fc339ebb649ed69f4858a8b9d8eae12cd05cc7506e8ef5b.json  query-5113ac74ca2b05f6b591b10352d3d1ff9c290b7dd84929ef4fadb3094025db2c.json  query-5204b400b2901e87f15367f7f70f14da16a584d878867f915b356a5ce27b2f5e.json  query-5947c98a070c3696182f8e167122554ad7041b1d72270050b48eb56e29cfaa50.json  query-5c226acede3ea3c69cec81684830d6044767b14ef41a8c19714555acff880fcb.json  query-5dedb1cac2b1fe92564ee852b113f11c58d7f879d9e43b2352896e589d389bcd.json  query-633f41c6d1c97d822417e12c11137440c47403402d04e64fd976749b9a6bff8c.json  query-653f27d7621703abb597200760d7b5b13ec903b609c4d5d376a660bf125ea7da.json  query-6ab4cfcf318eacd49fd3ba249d44f051d58e9c7a88fadbd85a3e96fde7cfeb04.json  query-6b6e9729a4dfc648de0dd38b79f0be26c729093698b43ffdf3dcfa9380c6b937.json  query-6d2fd4b67644ff103d0b6348bc56fd00b7731d72cc6e0eb0d2bc5c329a363883.json  query-70998b3f36a07a58d73bcca459850753dc29c76d5234bbe91e64629e9d4012ff.json  query-72ead16b74a7812b5f335df0e58de68162e6b7c1055aa5e426a1251a6b7b1407.json  query-7b05b2be869e3e453d6751abda47225b8d0183a1d49b9b0b7bb2a7632f831265.json  query-7d35a05decb078a5c96f656167ec37bbbe7dafe4da73602f580b3d219ba2dd3e.json  query-7e0f260be75595cc77c21a1bdb8e6880633d31a60a024cae6e4da2027d98504b.json  query-804bad4108f796b14a94a4745b17efd0fc1a19384e50c8ce80b222c314419808.json  query-8196eafff180b4371002622c2590343fcde523fb8089fb64f81a9bf15c83ad06.json  query-89d748ea676dd4c4ff2c5450edccb96187fb7a790614f6f4ea60c8ec66f0d118.json  query-a1cf39fc762f104feb92563e8779e67cf3f132608c9994e8b3d50bdfd310ebc0.json  query-a9ac57cc0a1f7ca964b990c8361a2ffdca199921ce48b572aebbba2454c7da90.json  query-a9c29b5b7443e1d7703551ca42d4df37585f508516835e6e9db0aa6390b6e471.json  query-c4b844bb20303149a49acdd829c24aacd5f67edd773a2d90d0c549f62cc9fed7.json  query-e140b0936ba4bf13f5173c19cff9f89dc01534be2325f345b375ac031b131f52.json  (+9 more)
backend/config/: settings.toml
backend/configuration/: base.toml  local.toml  production.toml  settings.toml
backend/migrations/: 20221102152115_init.sql  20221109104229_messages_order.sql  20221129201000_nicknames.sql  20221129212640_group_invitations.sql  20221201200700_jwt_blacklist.sql  20221210205227_friendships.sql  20221213183227_init.down.sql  20221213183227_init.up.sql  20221213183248_messages_order.down.sql  20221213183248_messages_order.up.sql  20221213183253_nicknames.down.sql  20221213183253_nicknames.up.sql  20221213183305_group_invitations.down.sql  20221213183305_group_invitations.up.sql  20221213183311_jwt_blacklist.down.sql  20221213183311_jwt_blacklist.up.sql  (+19 more)
(+137 files in other folders)
