[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

[dependencies]
anyhow = "1.0.66"
axum = { version = "0.5.17", features = ["macros", "headers"] }
dotenv = "0.15.0"
jsonwebtoken = "8.1.1"
rand = "0.8.5"
rust-argon2 = "1.0.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
sqlx = { version = "0.6.0", features = ["runtime-tokio-rustls","postgres","time","uuid"] }
thiserror = "1.0.37"
time = "0.3.16"
tokio = { version = "1.14.0", features = ["full"] }
tower-http = { version = "0.3.4", features = ["cors"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.0.0", features = ["v4", "serde"] }
zxcvbn = "2.2.1"
