[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

[dependencies]
anyhow = "1.0.66"
axum = { version = "0.5.17", features = ["macros", "headers", "ws"] }
axum-extra = { version = "0.3.7", features = ["cookie", "spa"] }
config = "0.13.2"
dashmap = "5.4.0"
dotenv = "0.15.0"
futures = "0.3.25"
jsonwebtoken = "8.1.1"
lettre = { version = "0.10.1", features = [
    "tokio1-rustls-tls",
    "tokio1-native-tls",
] }
maud = "0.24.0"
nanoid = "0.4.0"
rand = "0.8.5"
redis = { version = "0.22.2", features = ["tokio-native-tls-comp", "r2d2", "connection-manager", "tokio-comp"] }
rust-argon2 = "1.0.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
sqlx = { version = "0.6.0", features = [
    "runtime-tokio-rustls",
    "postgres",
    "time",
    "uuid",
    "offline",
    "json",
] }
thiserror = "1.0.37"
time = { version = "0.3.16", features = ["serde"] }
tokio = { version = "1.14.0", features = ["full"] }
tower-http = { version = "0.3.4", features = ["cors"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.0.0", features = ["v4", "serde"] }
validator = { version = "0.16.0", features = ["derive"] }
zxcvbn = "2.2.1"

[dev-dependencies]
reqwest = { version = "0.11.12", features = ["json", "cookies"] }
