[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
axum = { version = "0.6.20", features = ["macros", "headers", "ws"] }
axum-extra = { version = "0.8.0", features = ["cookie"] }
config = "0.13.2"
dashmap = "5.4.0"
dotenv = "0.15.0"
futures = "0.3.25"
hyper = "0.14.23"
jsonwebtoken = "8.1.1"
lettre = { version = "0.10.1", features = [
    "tokio1-rustls-tls",
    "tokio1-native-tls",
] }
maud = "0.25.0"
nanoid = "0.4.0"
rand = "0.8.5"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "postgres", "time", "uuid", "migrate", "json", "ipnetwork"] }
thiserror = "1.0.37"
time = { version = "0.3.16", features = ["serde"] }
tokio = { version = "1.14.0", features = ["full", "tracing"] }
tower-http = { version = "0.4.4", features = ["cors", "fs"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-test = "0.2.4"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
validator = { version = "0.16.1", features = ["derive"] }
zxcvbn = "2.2.2"
reqwest = { version = "0.11.22", features = ["json", "cookies"] }
typeshare = "1.0.1"
console-subscriber = "0.2.0"
redis = { version = "0.23.3", features = ["tokio-comp", "tokio-rustls-comp", "aio", "connection-manager"] }
argon2 = "0.5.2"
